feat: 样式打包优化

--- a/packages/theme-chalk/index.scss
+++ b/packages/theme-chalk/index.scss
@@ -1,7 +1,7 @@
 @import './mixins/config.scss';
 @import './var.scss';
 @import './normalize.scss';
-@import './animation.scss';
+@import './mixins/animation.scss';
 @import './mixins/mixins.scss'; 
 @import './mixins/animation.scss'; 
 @import './mixins/utils.scss';
