--- a/packages/theme-chalk/normalize.scss
+++ b/packages/theme-chalk/normalize.scss
@@ -1,15 +1,15 @@
-input,
-button,
-textarea {
-  color: inherit;
-  font: inherit;
-}
+// input,
+// button,
+// textarea {
+//   color: inherit;
+//   font: inherit;
+// }
 
-input,
-button,
-textarea,
-[class*='cq-'] {
-  &:focus {
-    outline: none;
-  }
-}
+// input,
+// button,
+// textarea,
+// [class*='cq-'] {
+//   &:focus {
+//     outline: none;
+//   }
+// }
