--- a/packages/components/base/button/src/button.scss
+++ b/packages/components/base/button/src/button.scss
@@ -1,13 +1,13 @@
 
-// @use "./../../../../theme-chalk/index.scss" as *;
-@import "./../../../../theme-chalk/index.scss";
+@use "../../../../theme-chalk/index.scss" as *;
+// @import "./../../../../theme-chalk/index.scss";
 
-// .cq-button{
-//   color:var(--cq-orange);
-// }
-@include b(button) {
-  color:$--color-primary;
-  text{
-    color:$--color-success;
-  }
+.cq-button{
+  color:var(--cq-orange);
 }
+// @include b(button) {
+//   color:$--color-primary;
+//   text{
+//     color:$--color-success;
+//   }
+// }
