--- a/packages/components/base/checkbox/src/checkbox.scss
+++ b/packages/components/base/checkbox/src/checkbox.scss
@@ -1,5 +1,6 @@
 // @use "./../../../../theme-chalk/index.scss" as *;
-@import "./../../../../theme-chalk/index.scss";
+// @import "./../../../../theme-chalk/index.scss";
+@use "../../../../theme-chalk/index.scss" as *;
 .cq-checkbox{
   color:var(--cq-green);
   // color:$--color-danger;
