--- a/packages/theme-chalk/mixins/mixins.scss
+++ b/packages/theme-chalk/mixins/mixins.scss
@@ -1,6 +1,6 @@
 // // @use 多次引入只会打包一次
-// @use "./config.scss" as *;
-@import "./config.scss";
+@use "./config.scss";
+// @import "./config.scss";
 // @import "../mixins/config.scss";
 // .cq-button{}
 @mixin b($block) {
