--- a/packages/theme-chalk/var.scss
+++ b/packages/theme-chalk/var.scss
@@ -13,9 +13,7 @@
 // $--color-warning: #e6a23c;
 // $--color-danger: #f56c6c;
 // $--color-info: #909399;
-
-:root,
-:host {
+:root,page{
   // #{namespace-var('black')}: #000; //--cq-black: #000;
   // #{namespace-var('black')}: #000;
   // #{namespace-var('white')}: #fff;
