--- a/packages/components/base/button/src/button.scss
+++ b/packages/components/base/button/src/button.scss
@@ -1,7 +1,8 @@
 
-@use "../../../../theme-chalk/index.scss" as *;
-// @import "./../../../../theme-chalk/index.scss";
+@use "../../../../theme-chalk/var.scss" as *;
+// // @import "./../../../../theme-chalk/index.scss";
 
+// :root,page{--cq-orange:#ff976a;--cq-green:#07c160}
 .cq-button{
   color:var(--cq-orange);
 }
